Refactored with functions to query sinequa and summarize the results

--- a/notebooks/sinequa_api.ipynb
+++ b/notebooks/sinequa_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "543e0b50",
+   "id": "28753452",
    "metadata": {},
    "source": [
     "# Settings for Sinequa Server to Query"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c80141f4",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15d27fc",
+   "id": "e474ac98",
    "metadata": {},
    "source": [
     "# Search Query Setup"
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "86d63ba3",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31acd538",
+   "id": "7a548b29",
+   "metadata": {},
+   "source": [
+    "# Define Functions to Query Sinequa and Summarize Response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "db43b4a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sinequa_query(query_url, payload):\n",
+    "    headers = {\n",
+    "        'Content-Type': 'text/plain'\n",
+    "    }\n",
+    "    resp = requests.post(\n",
+    "        query_url, # replace with your SDE instance API URL\n",
+    "        data=json.dumps(payload), \n",
+    "        headers=headers\n",
+    "    )\n",
+    "    return resp.json()\n",
+    "\n",
+    "def search_resp_summary(resp_json):\n",
+    "    #pprint(resp_json)\n",
+    "    records = resp_json['records']\n",
+    "    nrecords = len(records)\n",
+    "    print(\"Response has {} records\".format(nrecords))\n",
+    "    print(\"First record:\")\n",
+    "    pprint(records[0])\n",
+    "    return nrecords\n",
+    "    \n",
+    "print(\"finished\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d179b2a3",
    "metadata": {},
    "source": [
     "# Basic Keyword Search"
@@ -81,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "543b170e",
    "metadata": {
     "scrolled": false
@@ -179,7 +225,7 @@
     }
    ],
    "source": [
-    "payload = {\n",
+    "payload_keyword_search = {\n",
     "    \"user\": USER, # replace with your username\n",
     "    \"password\": PASS, # replace with your password\n",
     "    \"app\": APP, # replace with your app name\n",
@@ -188,24 +234,18 @@
     "        \"text\": query, # replace with your query\n",
     "    },\n",
     "}\n",
-    "headers = {\n",
-    "  'Content-Type': 'text/plain'\n",
-    "}\n",
-    "resp = requests.post(\n",
-    "  query_url, # replace with your SDE instance API URL\n",
-    "  data=json.dumps(payload), \n",
-    "  headers=headers\n",
+    "resp_keyword_search = sinequa_query(\n",
+    "    query_url,\n",
+    "    payload_keyword_search\n",
     ")\n",
-    "#pprint(resp.json())\n",
-    "records = resp.json()['records']\n",
-    "print(\"Response has {} records\".format(len(records)))\n",
-    "print(\"First record:\")\n",
-    "pprint(records[0])"
+    "nrecords_keyword_search = search_resp_summary(\n",
+    "    resp_keyword_search\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6560ec97",
+   "id": "d438a77e",
    "metadata": {},
    "source": [
     "# Paging of Search Results"
@@ -213,8 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "db8ac556",
+   "execution_count": 5,
+   "id": "8e057ee8",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +335,7 @@
    "source": [
     "page_size = 20 # number of documents per page\n",
     "page = 2 # page of results to retrieve\n",
-    "payload = {\n",
+    "payload_keyword_search_with_paging = {\n",
     "    \"user\": USER, # replace with your username\n",
     "    \"password\": PASS, # replace with your password\n",
     "    \"app\": APP, # replace with your app name\n",
@@ -306,19 +346,13 @@
     "        \"page\": page # <--- replace with your desired page number\n",
     "    },\n",
     "}\n",
-    "headers = {\n",
-    "  'Content-Type': 'text/plain'\n",
-    "}\n",
-    "resp = requests.post(\n",
-    "  query_url, # replace with your SDE instance API URL\n",
-    "  data=json.dumps(payload), \n",
-    "  headers=headers\n",
+    "resp_keyword_search_with_paging = sinequa_query(\n",
+    "    query_url,\n",
+    "    payload_keyword_search_with_paging\n",
     ")\n",
-    "#pprint(resp.json())\n",
-    "records = resp.json()['records']\n",
-    "print(\"Response has {} records\".format(len(records)))\n",
-    "print(\"First record:\")\n",
-    "pprint(records[0])"
+    "nrecords_keyword_search_with_paging = search_resp_summary(\n",
+    "    resp_keyword_search_with_paging\n",
+    ")"
    ]
   }
  ],
