--- a/notebooks/sinequa_api.ipynb
+++ b/notebooks/sinequa_api.ipynb
@@ -110,8 +110,9 @@
     "    records = resp_json['records']\n",
     "    nrecords = len(records)\n",
     "    print(\"Response has {} records\".format(nrecords))\n",
-    "    print(\"First record:\")\n",
-    "    pprint(records[0])\n",
+    "    if nrecords > 0:\n",
+    "        print(\"First record:\")\n",
+    "        pprint(records[0])\n",
     "    return nrecords\n",
     "    \n",
     "print(\"finished\")"
@@ -352,6 +353,161 @@
     ")\n",
     "nrecords_keyword_search_with_paging = search_resp_summary(\n",
     "    resp_keyword_search_with_paging\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38eb2221",
+   "metadata": {},
+   "source": [
+    "# Filter by tab - no match to \"Images\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "789a2367",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response has 0 records\n"
+     ]
+    }
+   ],
+   "source": [
+    "payload_keyword_search = {\n",
+    "    \"user\": USER, # replace with your username\n",
+    "    \"password\": PASS, # replace with your password\n",
+    "    \"app\": APP, # replace with your app name\n",
+    "    \"query\": {\n",
+    "        \"name\": QAPP, # replace with your query app name\n",
+    "        \"text\": query, # replace with your query\n",
+    "        \"pageSize\": 20,\n",
+    "        \"page\": 2,\n",
+    "        \"tab\": \"Images\", # <--- Enter tab label\n",
+    "    },\n",
+    "}\n",
+    "resp_keyword_search = sinequa_query(\n",
+    "    query_url,\n",
+    "    payload_keyword_search\n",
+    ")\n",
+    "nrecords_keyword_search = search_resp_summary(\n",
+    "    resp_keyword_search\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f3b05dc",
+   "metadata": {},
+   "source": [
+    "# Filter by tab - matches to \"Data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a66b8e7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response has 20 records\n",
+      "First record:\n",
+      "{'collection': ['/SMD_Planetary/PDS_API_Dataset_Only/'],\n",
+      " 'databasealias': 'NASA_PDS',\n",
+      " 'docformat': 'htm',\n",
+      " 'documentweight': 'default',\n",
+      " 'extracts': [{'highlighted': '4 {b}OSIRIS{nb} - NARROW ANGLE CAMERA Not '\n",
+      "                              'Provided INTERNATIONAL ROSETTA MISSION Not '\n",
+      "                              'Provided 2019-01-11T00:00:00Z SFH 2010-11-12 '\n",
+      "                              'Product_Data_Set_PDS3 Not Provided Not Provided '\n",
+      "                              'Not Provided Not Provided PDS3 Not Provided Not '\n",
+      "                              'Provided Not Provided Not Provided '\n",
+      "                              'Product_Data_Set_PDS3 '\n",
+      "                              'https://archives.esac.esa.int/psa/pdap/metadata?DATA_SET_ID=RO-X-OSINAC-2-CR4B-CRUISE4B-V1.4&RETURN_TYPE=HTML '\n",
+      "                              'Not Provided '\n",
+      "                              'urn:esa:psa:context_pds3:resource:resource.ro-x-osinac-2-cr4b-cruise4b-v1.',\n",
+      "               'locations': '566,473',\n",
+      "               'originalLocations': '4096,2810',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '724Z ROSETTA-ORBITER CRUISE 4-2 OSINAC 2 EDR '\n",
+      "                              'data Science and calibration images acquired by '\n",
+      "                              'the {b}OSIRIS{nb} Narrow Angle Camera on the '\n",
+      "                              'rosetta spacecraft during the CRUISE 4-2 '\n",
+      "                              'mission phase 1.0',\n",
+      "               'locations': '1184,189',\n",
+      "               'originalLocations': '7585,487',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '4 Product_Data_Set_PDS3 PDS3 esa Not Provided '\n",
+      "                              'Not Provided Hviid, S. F., Keller H. U. and the '\n",
+      "                              '{b}OSIRIS{nb} Team, {b}OSIRIS{nb} ROSETTA '\n",
+      "                              'EXPERIMENT DATA RECORD V1.',\n",
+      "               'locations': '119,148',\n",
+      "               'originalLocations': '1625,784',\n",
+      "               'score': '49152'}],\n",
+      " 'fileext': 'htm',\n",
+      " 'filename': 'file.htm',\n",
+      " 'flags': ['h', 't'],\n",
+      " 'globalrelevance': 0.864737,\n",
+      " 'id': '/SMD_Planetary/PDS_API_Dataset_Only/|67cfa87ecebb88de07eb264c53fbcd8f',\n",
+      " 'indexationtime': '2023-06-29 18:22:36',\n",
+      " 'language': ['en'],\n",
+      " 'matchingpartnames': ['text'],\n",
+      " 'matchlocationsperpartname': [{'matchlocations': []}],\n",
+      " 'meaningrelevance': '1',\n",
+      " 'person': [{'count': 1,\n",
+      "             'display': 'Rosetta Mission',\n",
+      "             'value': 'ROSETTA MISSION'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Rosetta Osiris',\n",
+      "             'value': 'ROSETTA OSIRIS'}],\n",
+      " 'rank': 20,\n",
+      " 'relevantExtracts': '4 <b>OSIRIS </b>- NARROW ANGLE ... 724Z ROSETTA-ORBITER '\n",
+      "                     'CRUISE ... acquired by the <b>OSIRIS </b>Narrow Angle '\n",
+      "                     'Camera ... 4 Product_Data_Set_PDS3 PDS3 ... U. and the '\n",
+      "                     '<b>OSIRIS </b>Team, <b>OSIRIS </b>ROSETTA EXPERIMENT ',\n",
+      " 'size': 8174,\n",
+      " 'sourcestr56': 'Data',\n",
+      " 'termspresence': [{'presence': 'found', 'term': 'osiris'}],\n",
+      " 'thumbnailUrl': '/xdownload/thumbnail/%257B%2522app%2522%253A%2522nasa-sba-smd%2522%252C%2522id%2522%253A%2522%255C%252FSMD_Planetary%255C%252FPDS_API_Dataset_Only%255C%252F%257C67cfa87ecebb88de07eb264c53fbcd8f%2522%257D/file.jpg',\n",
+      " 'title': 'ROSETTA-ORBITER CRUISE 4-2 OSINAC 2 EDR data '\n",
+      "          'urn:esa:psa:context_pds3:data_set:data_set.ro-x-osinac-2-cr4b-cruise4b-v1.4 '\n",
+      "          'Product...',\n",
+      " 'treepath': ['/Planetary Science/Data/Planetary Science Data (PDS)/'],\n",
+      " 'version': '65145e0ba6c799bc9347abb1c76088f7',\n",
+      " 'wordcountrelevance': '1',\n",
+      " 'wordproximityrelevance': '1',\n",
+      " 'wordscorerelevance': '0.613525',\n",
+      " 'wordsrelevance': '0.864502'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "payload_keyword_search = {\n",
+    "    \"user\": USER, # replace with your username\n",
+    "    \"password\": PASS, # replace with your password\n",
+    "    \"app\": APP, # replace with your app name\n",
+    "    \"query\": {\n",
+    "        \"name\": QAPP, # replace with your query app name\n",
+    "        \"text\": query, # replace with your query\n",
+    "        \"pageSize\": 20,\n",
+    "        \"page\": 2,\n",
+    "        \"tab\": \"Data\", # <--- Enter tab label\n",
+    "    },\n",
+    "}\n",
+    "resp_keyword_search = sinequa_query(\n",
+    "    query_url,\n",
+    "    payload_keyword_search\n",
+    ")\n",
+    "nrecords_keyword_search = search_resp_summary(\n",
+    "    resp_keyword_search\n",
     ")"
    ]
   }
