Add cells to demonstrate sorting or results and filtering by tab.

--- a/notebooks/sinequa_api.ipynb
+++ b/notebooks/sinequa_api.ipynb
@@ -358,7 +358,224 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38eb2221",
+   "id": "fb866af4",
+   "metadata": {},
+   "source": [
+    "# Sort by column \"size\" descending"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "08c708e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response has 10 records\n",
+      "First record:\n",
+      "{'collection': ['/SMD_Planetary/PDS_API_Dataset_Only/'],\n",
+      " 'databasealias': 'NASA_PDS',\n",
+      " 'docformat': 'htm',\n",
+      " 'documentweight': 'default',\n",
+      " 'extracts': [{'highlighted': '0 Product_Data_Set_PDS3 PDS3 esa Not Provided '\n",
+      "                              'Not Provided Sierks, H. and the {b}OSIRIS{nb} '\n",
+      "                              'Team, ROSETTA-ORBITER ROSETTA EXTENSION 2 '\n",
+      "                              'OSINAC 2 EDR MTP029 V1.',\n",
+      "               'locations': '143,150',\n",
+      "               'originalLocations': '1649,813',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '0 {b}OSIRIS{nb} - NARROW ANGLE CAMERA Not '\n",
+      "                              'Provided INTERNATIONAL ROSETTA MISSION Not '\n",
+      "                              'Provided 2019-01-11T00:00:00Z '\n",
+      "                              'RO-RIS-MPAE-ID-015 4/c Product_Data_Set_PDS3 '\n",
+      "                              'Not Provided Not Provided Not Provided Not '\n",
+      "                              'Provided PDS3 Not Provided Not Provided Not '\n",
+      "                              'Provided Not Provided Product_Data_Set_PDS3 '\n",
+      "                              'https://archives.esac.esa.int/psa/pdap/metadata?DATA_SET_ID=RO-C-OSINAC-2-EXT2-67PCHURYUMOV-M29-V1.0&RETURN_TYPE=HTML '\n",
+      "                              'Not Provided '\n",
+      "                              'urn:esa:psa:context_pds3:resource:resource.ro-c-osinac-2-ext2-67pchuryumov-m29-v1.',\n",
+      "               'locations': '639,497',\n",
+      "               'originalLocations': '4297,2842',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '0 Science and calibration images acquired by '\n",
+      "                              'the {b}OSIRIS{nb} Narrow Angle Camera on the '\n",
+      "                              'Rosetta spacecraft during the ROSETTA EXTENSION '\n",
+      "                              '2 mission phase.',\n",
+      "               'locations': '1377,147',\n",
+      "               'originalLocations': '8008,294',\n",
+      "               'score': '49152'}],\n",
+      " 'fileext': 'htm',\n",
+      " 'filename': 'file.htm',\n",
+      " 'flags': ['h', 't'],\n",
+      " 'globalrelevance': 0.845703,\n",
+      " 'id': '/SMD_Planetary/PDS_API_Dataset_Only/|1b071c315ceebad371d553177814b5da',\n",
+      " 'indexationtime': '2023-06-29 18:02:46',\n",
+      " 'language': ['en'],\n",
+      " 'matchingpartnames': ['text'],\n",
+      " 'matchlocationsperpartname': [{'matchlocations': []}],\n",
+      " 'meaningrelevance': '1',\n",
+      " 'person': [{'count': 2,\n",
+      "             'display': 'Rosetta Extension',\n",
+      "             'value': 'ROSETTA EXTENSION'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Rosetta Mission',\n",
+      "             'value': 'ROSETTA MISSION'}],\n",
+      " 'rank': 0,\n",
+      " 'relevantExtracts': '0 Product_Data_Set_PDS3 PDS3 ... H. and the <b>OSIRIS '\n",
+      "                     '</b>Team, ROSETTA-ORBITER ROSETTA ... V1.... 0 <b>OSIRIS '\n",
+      "                     '</b>- NARROW ANGLE ... 0 Science and ... acquired by the '\n",
+      "                     '<b>OSIRIS </b>Narrow Angle Camera ',\n",
+      " 'size': 8507,\n",
+      " 'sourcestr56': 'Data',\n",
+      " 'termspresence': [{'presence': 'found', 'term': 'osiris'}],\n",
+      " 'thumbnailUrl': '/xdownload/thumbnail/%257B%2522app%2522%253A%2522nasa-sba-smd%2522%252C%2522id%2522%253A%2522%255C%252FSMD_Planetary%255C%252FPDS_API_Dataset_Only%255C%252F%257C1b071c315ceebad371d553177814b5da%2522%257D/file.jpg',\n",
+      " 'title': 'ROSETTA-ORBITER ROSETTA EXTENSION 2 OSINAC 2 EDR MTP029 V1.0 '\n",
+      "          'urn:esa:psa:context_pds3:data_set:data_set.ro-c-osinac-2-ext2-67pch...',\n",
+      " 'treepath': ['/Planetary Science/Data/Planetary Science Data (PDS)/'],\n",
+      " 'version': '68a26cad2239b311b612e07b6bd03dcf',\n",
+      " 'wordcountrelevance': '1',\n",
+      " 'wordproximityrelevance': '1',\n",
+      " 'wordscorerelevance': '0.559082',\n",
+      " 'wordsrelevance': '0.845459'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "payload_sort_by_size_descending = {\n",
+    "    \"user\": USER, # replace with your username\n",
+    "    \"password\": PASS, # replace with your password\n",
+    "    \"app\": APP, # replace with your app name\n",
+    "    \"query\": {\n",
+    "        \"name\": QAPP, # replace with your query app name\n",
+    "        \"text\": query, # replace with your query\n",
+    "        \"orderBy\": \"size desc\", # <-- Enter column name and \"asc\" or \"desc\" for sort order\n",
+    "    },\n",
+    "}\n",
+    "resp_sort_by_size_descending = sinequa_query(\n",
+    "    query_url,\n",
+    "    payload_sort_by_size_descending\n",
+    ")\n",
+    "nrecords_sort_by_size_descending = search_resp_summary(\n",
+    "    resp_sort_by_size_descending\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "269c2e5d",
+   "metadata": {},
+   "source": [
+    "# Sort by column \"size\" ascending"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6d7d9a81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response has 10 records\n",
+      "First record:\n",
+      "{'collection': ['/SMD_Planetary/PDS_API_Dataset_Only/'],\n",
+      " 'databasealias': 'NASA_PDS',\n",
+      " 'docformat': 'htm',\n",
+      " 'documentweight': 'default',\n",
+      " 'extracts': [{'highlighted': '2 {b}OSIRIS{nb} - WIDE ANGLE CAMERA Not '\n",
+      "                              'Provided INTERNATIONAL ROSETTA MISSION Not '\n",
+      "                              'Provided 2019-01-11T00:00:00Z SFH 2010-11-12 '\n",
+      "                              'Product_Data_Set_PDS3 Not Provided Not Provided '\n",
+      "                              'Not Provided Not Provided PDS3 Not Provided Not '\n",
+      "                              'Provided Not Provided Not Provided '\n",
+      "                              'Product_Data_Set_PDS3 '\n",
+      "                              'https://archives.esac.esa.int/psa/pdap/metadata?DATA_SET_ID=RO-X-OSIWAC-3-CR5-CRUISE5-V1.2&RETURN_TYPE=HTML '\n",
+      "                              'Not Provided '\n",
+      "                              'urn:esa:psa:context_pds3:resource:resource.ro-x-osiwac-3-cr5-cruise5-v1.',\n",
+      "               'locations': '546,467',\n",
+      "               'originalLocations': '4076,2802',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '2 Science and calibration images acquired by '\n",
+      "                              'the {b}OSIRIS{nb} Wide Angle Camera on the '\n",
+      "                              'rosetta spacecraft during the CRUISE 5 mission '\n",
+      "                              'phase 1.0',\n",
+      "               'locations': '1183,137',\n",
+      "               'originalLocations': '7676,341',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '2 Product_Data_Set_PDS3 PDS3 esa Not Provided '\n",
+      "                              'Not Provided Hviid, S. F., Keller H. U. and the '\n",
+      "                              '{b}OSIRIS{nb} Team, {b}OSIRIS{nb} ROSETTA '\n",
+      "                              'EXPERIMENT DATA RECORD V1.',\n",
+      "               'locations': '103,148',\n",
+      "               'originalLocations': '1609,784',\n",
+      "               'score': '49152'}],\n",
+      " 'fileext': 'htm',\n",
+      " 'filename': 'file.htm',\n",
+      " 'flags': ['h', 't'],\n",
+      " 'globalrelevance': 0.864737,\n",
+      " 'id': '/SMD_Planetary/PDS_API_Dataset_Only/|ee7052b7de707d338cb631c28bbcb5ae',\n",
+      " 'indexationtime': '2023-06-29 18:19:10',\n",
+      " 'language': ['en'],\n",
+      " 'matchingpartnames': ['text'],\n",
+      " 'matchlocationsperpartname': [{'matchlocations': []}],\n",
+      " 'meaningrelevance': '1',\n",
+      " 'person': [{'count': 1,\n",
+      "             'display': 'Rosetta Mission',\n",
+      "             'value': 'ROSETTA MISSION'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Rosetta Osiris',\n",
+      "             'value': 'ROSETTA OSIRIS'}],\n",
+      " 'rank': 0,\n",
+      " 'relevantExtracts': '2 <b>OSIRIS </b>- WIDE ANGLE ... '\n",
+      "                     'urn:esa:psa:context_pds3:resource:resource.ro-x-osiwac-3-cr5-cruise5-v1.... '\n",
+      "                     '2 Science and ... acquired by the <b>OSIRIS </b>Wide '\n",
+      "                     'Angle Camera ... 2 Product_Data_Set_PDS3 PDS3 ... U. and '\n",
+      "                     'the <b>OSIRIS </b>Team, <b>OSIRIS </b>ROSETTA '\n",
+      "                     'EXPERIMENT ',\n",
+      " 'size': 8119,\n",
+      " 'sourcestr56': 'Data',\n",
+      " 'termspresence': [{'presence': 'found', 'term': 'osiris'}],\n",
+      " 'thumbnailUrl': '/xdownload/thumbnail/%257B%2522app%2522%253A%2522nasa-sba-smd%2522%252C%2522id%2522%253A%2522%255C%252FSMD_Planetary%255C%252FPDS_API_Dataset_Only%255C%252F%257Cee7052b7de707d338cb631c28bbcb5ae%2522%257D/file.jpg',\n",
+      " 'title': 'RO-X-OSIWAC-3-CR5-CRUISE5-V1.2 '\n",
+      "          'urn:esa:psa:context_pds3:data_set:data_set.ro-x-osiwac-3-cr5-cruise5-v1.2 '\n",
+      "          'Product_Data_Set_PDS3 P...',\n",
+      " 'treepath': ['/Planetary Science/Data/Planetary Science Data (PDS)/'],\n",
+      " 'version': '2ae969453340dc70dd37cd7456528110',\n",
+      " 'wordcountrelevance': '1',\n",
+      " 'wordproximityrelevance': '1',\n",
+      " 'wordscorerelevance': '0.613525',\n",
+      " 'wordsrelevance': '0.864502'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "payload_sort_by_size_ascending = {\n",
+    "    \"user\": USER, # replace with your username\n",
+    "    \"password\": PASS, # replace with your password\n",
+    "    \"app\": APP, # replace with your app name\n",
+    "    \"query\": {\n",
+    "        \"name\": QAPP, # replace with your query app name\n",
+    "        \"text\": query, # replace with your query\n",
+    "        \"orderBy\": \"size asc\", # <-- Enter column name and \"asc\" or \"desc\" for sort order\n",
+    "    },\n",
+    "}\n",
+    "resp_sort_by_size_ascending = sinequa_query(\n",
+    "    query_url,\n",
+    "    payload_sort_by_size_ascending\n",
+    ")\n",
+    "nrecords_sort_by_size_ascending = search_resp_summary(\n",
+    "    resp_sort_by_size_ascending\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02bcb34e",
    "metadata": {},
    "source": [
     "# Filter by tab - no match to \"Images\""
@@ -366,8 +583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "789a2367",
+   "execution_count": 8,
+   "id": "9fe0ab5a",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +596,7 @@
     }
    ],
    "source": [
-    "payload_keyword_search = {\n",
+    "payload_filter_by_tab_nomatch = {\n",
     "    \"user\": USER, # replace with your username\n",
     "    \"password\": PASS, # replace with your password\n",
     "    \"app\": APP, # replace with your app name\n",
@@ -391,18 +608,18 @@
     "        \"tab\": \"Images\", # <--- Enter tab label\n",
     "    },\n",
     "}\n",
-    "resp_keyword_search = sinequa_query(\n",
+    "resp_filter_by_tab_nomatch = sinequa_query(\n",
     "    query_url,\n",
-    "    payload_keyword_search\n",
+    "    payload_filter_by_tab_nomatch\n",
     ")\n",
-    "nrecords_keyword_search = search_resp_summary(\n",
-    "    resp_keyword_search\n",
+    "nrecords_filter_by_tab_nomatch = search_resp_summary(\n",
+    "    resp_filter_by_tab_nomatch\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f3b05dc",
+   "id": "82a6548e",
    "metadata": {},
    "source": [
     "# Filter by tab - matches to \"Data\""
@@ -410,8 +627,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a66b8e7a",
+   "execution_count": 9,
+   "id": "3eb482d3",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +707,7 @@
     }
    ],
    "source": [
-    "payload_keyword_search = {\n",
+    "payload_filter_by_tab_match = {\n",
     "    \"user\": USER, # replace with your username\n",
     "    \"password\": PASS, # replace with your password\n",
     "    \"app\": APP, # replace with your app name\n",
@@ -502,12 +719,12 @@
     "        \"tab\": \"Data\", # <--- Enter tab label\n",
     "    },\n",
     "}\n",
-    "resp_keyword_search = sinequa_query(\n",
+    "resp_filter_by_tab_match = sinequa_query(\n",
     "    query_url,\n",
-    "    payload_keyword_search\n",
+    "    payload_filter_by_tab_match\n",
     ")\n",
-    "nrecords_keyword_search = search_resp_summary(\n",
-    "    resp_keyword_search\n",
+    "nrecords_filter_by_tab_match = search_resp_summary(\n",
+    "    resp_filter_by_tab_match\n",
     ")"
    ]
   }
