Check for no records in json response.

--- a/notebooks/sinequa_api.ipynb
+++ b/notebooks/sinequa_api.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "db43b4a4",
    "metadata": {},
    "outputs": [
@@ -107,6 +107,10 @@
     "\n",
     "def search_resp_summary(resp_json):\n",
     "    #pprint(resp_json)\n",
+    "    if 'records' not in resp_json:\n",
+    "        print (\"No records found:\")\n",
+    "        pprint(resp_json)\n",
+    "        return 0\n",
     "    records = resp_json['records']\n",
     "    nrecords = len(records)\n",
     "    print(\"Response has {} records\".format(nrecords))\n",
@@ -128,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "543b170e",
    "metadata": {
     "scrolled": false
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "8e057ee8",
    "metadata": {},
    "outputs": [
@@ -366,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "08c708e7",
    "metadata": {},
    "outputs": [
@@ -465,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "269c2e5d",
+   "id": "d36ce0a7",
    "metadata": {},
    "source": [
     "# Sort by column \"size\" ascending"
@@ -473,8 +477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "6d7d9a81",
+   "execution_count": 14,
+   "id": "1f5b3a0f",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "9fe0ab5a",
    "metadata": {},
    "outputs": [
@@ -627,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "3eb482d3",
    "metadata": {},
    "outputs": [
@@ -727,6 +731,12 @@
     "    resp_filter_by_tab_match\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e43ce6",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
