Added example of filtering by facet.

--- a/notebooks/sinequa_api.ipynb
+++ b/notebooks/sinequa_api.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "db43b4a4",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "543b170e",
    "metadata": {
     "scrolled": false
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "8e057ee8",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "08c708e7",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d36ce0a7",
+   "id": "8fec1af4",
    "metadata": {},
    "source": [
     "# Sort by column \"size\" ascending"
@@ -477,8 +477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1f5b3a0f",
+   "execution_count": 7,
+   "id": "0d39123a",
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "9fe0ab5a",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "3eb482d3",
    "metadata": {},
    "outputs": [
@@ -734,9 +734,138 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e43ce6",
+   "id": "d5c20d6c",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Filter by Facet\n",
+    "\n",
+    "Facets are presented in Sinequa as branches of a tree that can be defined when data sources are configured for indexing.  One or more branches or sub-branches of the tree can be specified as \"tree paths\".  The search results are filtered to only the documents under those tree paths.\n",
+    "\n",
+    "The key extra payload element under query to match tree paths of `/path1`, `/path2`, or `/path3` looks like this:\n",
+    "\n",
+    "    'select': [{'expression': 'treepath: (`/path1/*`:`/path2/*`:`/path3/*`)',\n",
+    "                'facet': 'Treepath'}],\n",
+    "The backticks are required.  In the example below, there is a single tree path (facet), `/Planetary Science`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e0d3a4f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response has 10 records\n",
+      "First record:\n",
+      "{'collection': ['/SMD_Planetary/PDS_API_Dataset_Only/'],\n",
+      " 'databasealias': 'NASA_PDS',\n",
+      " 'docformat': 'htm',\n",
+      " 'documentweight': 'default',\n",
+      " 'extracts': [{'highlighted': 'ROSETTA {b}OSIRIS{nb} SHAPE MODELS OF COMET '\n",
+      "                              '67P/C-G '\n",
+      "                              'urn:nasa:pds:context_pds3:data_set:data_set.ro-c-osinac-osiwac-5-67p-shape-v1.',\n",
+      "               'locations': '0,123',\n",
+      "               'originalLocations': '1170,459',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '0 {b}OSIRIS{nb} - WIDE ANGLE CAMERA ',\n",
+      "               'locations': '696,29',\n",
+      "               'originalLocations': '4288,133',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '{b}OSIRIS{nb} - NARROW ANGLE CAMERA Not '\n",
+      "                              'Provided INTERNATIONAL ROSETTA MISSION Not '\n",
+      "                              'Provided 2015-01-11T23:20:32Z 2015-01-08 '\n",
+      "                              'A.C.Raugh Creation Product_Data_Set_PDS3 Not '\n",
+      "                              'Provided Not Provided Not Provided Not Provided '\n",
+      "                              'PDS3 Not Provided Not Provided Not Provided Not '\n",
+      "                              'Provided Product_Data_Set_PDS3 '\n",
+      "                              '/ds-view/pds/viewDataset.jsp?',\n",
+      "               'locations': '725,318',\n",
+      "               'originalLocations': '4421,2326',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '547Z ROSETTA {b}OSIRIS{nb} SHAPE MODELS OF '\n",
+      "                              'COMET 67P/C-G Collected shape models of Comet '\n",
+      "                              '67P/Churyumov-Gerasimenko (1969 R1) produced by '\n",
+      "                              'the Rosetta mission.',\n",
+      "               'locations': '1399,150',\n",
+      "               'originalLocations': '7844,370',\n",
+      "               'score': '49152'}],\n",
+      " 'fileext': 'htm',\n",
+      " 'filename': 'file.htm',\n",
+      " 'flags': ['h', 't'],\n",
+      " 'globalrelevance': 0.872253,\n",
+      " 'id': '/SMD_Planetary/PDS_API_Dataset_Only/|3eb171af83ab9a31499d23e35eb01009',\n",
+      " 'indexationtime': '2023-06-29 19:07:37',\n",
+      " 'language': ['en'],\n",
+      " 'matchingpartnames': ['text'],\n",
+      " 'matchlocationsperpartname': [{'matchlocations': []}],\n",
+      " 'meaningrelevance': '1',\n",
+      " 'person': [{'count': 2,\n",
+      "             'display': 'Rosetta Osiris Shape',\n",
+      "             'value': 'ROSETTA OSIRIS SHAPE'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Claire Capanna',\n",
+      "             'value': 'CLAIRE CAPANNA'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Frank Preusker',\n",
+      "             'value': 'FRANK PREUSKER'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Frank Scholten',\n",
+      "             'value': 'FRANK SCHOLTEN'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Pedro Gutierrez',\n",
+      "             'value': 'PEDRO GUTIERREZ'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Robert Gaskell',\n",
+      "             'value': 'ROBERT GASKELL'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Rosetta Mission',\n",
+      "             'value': 'ROSETTA MISSION'}],\n",
+      " 'rank': 0,\n",
+      " 'relevantExtracts': 'ROSETTA <b>OSIRIS </b>SHAPE MODELS OF ... 67P/C-G '\n",
+      "                     'urn:nasa:pds:context_pds3:data_set:data_set.ro-c-osinac-osiwac-5-67p-shape-v1.... '\n",
+      "                     '0 <b>OSIRIS </b>- WIDE ... ... <b>OSIRIS </b>- NARROW '\n",
+      "                     'ANGLE ... /ds-view/pds/viewDataset.jsp?... 547Z ROSETTA '\n",
+      "                     '<b>OSIRIS </b>SHAPE MODELS OF ... mission.',\n",
+      " 'size': 8419,\n",
+      " 'sourcestr56': 'Data',\n",
+      " 'termspresence': [{'presence': 'found', 'term': 'osiris'}],\n",
+      " 'thumbnailUrl': '/xdownload/thumbnail/%257B%2522app%2522%253A%2522nasa-sba-smd%2522%252C%2522id%2522%253A%2522%255C%252FSMD_Planetary%255C%252FPDS_API_Dataset_Only%255C%252F%257C3eb171af83ab9a31499d23e35eb01009%2522%257D/file.jpg',\n",
+      " 'title': 'ROSETTA OSIRIS SHAPE MODELS OF COMET 67P/C-G '\n",
+      "          'urn:nasa:pds:context_pds3:data_set:data_set.ro-c-osinac-osiwac-5-67p-shape-v1.0 '\n",
+      "          'Pro...',\n",
+      " 'treepath': ['/Planetary Science/Data/Planetary Science Data (PDS)/'],\n",
+      " 'version': '1fdc791afa9b1e41b61b8a43f6255ee8',\n",
+      " 'wordcountrelevance': '1',\n",
+      " 'wordproximityrelevance': '1',\n",
+      " 'wordscorerelevance': '0.634766',\n",
+      " 'wordsrelevance': '0.87207'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "treepath = '/Planetary Science' # <-- Enter your facet treepath with a leading slash\n",
+    "\n",
+    "payload_filter_by_facet = {\n",
+    "    \"app\": APP,\n",
+    "    \"user\": USER,\n",
+    "    \"password\": PASS,\n",
+    "    \"query\": {\n",
+    "        'name': QAPP,\n",
+    "        'select': [{'expression': 'treepath: (`{}/*`)'.format(treepath),\n",
+    "                    'facet': 'Treepath'}],\n",
+    "        'text': 'osiris'},\n",
+    "    }\n",
+    "resp = sinequa_query(\n",
+    "    query_url,\n",
+    "    payload_filter_by_facet\n",
+    ")\n",
+    "nrecords = search_resp_summary(\n",
+    "    resp\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
