Updated variable names.

--- a/notebooks/sinequa_api.ipynb
+++ b/notebooks/sinequa_api.ipynb
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e0d3a4f7",
    "metadata": {},
    "outputs": [
@@ -858,12 +858,12 @@
     "                    'facet': 'Treepath'}],\n",
     "        'text': 'osiris'},\n",
     "    }\n",
-    "resp = sinequa_query(\n",
+    "resp_filter_by_facet = sinequa_query(\n",
     "    query_url,\n",
     "    payload_filter_by_facet\n",
     ")\n",
-    "nrecords = search_resp_summary(\n",
-    "    resp\n",
+    "nrecords_filter_by_facet = search_resp_summary(\n",
+    "    resp_filter_by_facet\n",
     ")"
    ]
   }
