Add markdown documentation throughout the notebook.

--- a/notebooks/sinequa_api.ipynb
+++ b/notebooks/sinequa_api.ipynb
@@ -5,7 +5,15 @@
    "id": "28753452",
    "metadata": {},
    "source": [
-    "# Settings for Sinequa Server to Query"
+    "# Demonstration of Sinequa REST API\n",
+    "\n",
+    "In this notebook, we demonstrate how the Sinequa REST API can be used to directly query the Sinequa server via web service calls, without using any particular integrated front-end.  The objective is to demonstrate how these calls to Sinequa can be made so that we can make these calls in a Jupyter notebook like this one or in any Python interpreter.  Alternatively, with translation from Python, these calls can be made on the command line with common tools like `curl` or `wget`, or in our own web-based user interfaces.\n",
+    "\n",
+    "This is a collaboration between NASA's Science Discovery Engine team and NASA's Planetary Data System Engineering Node (PDS-EN) at JPL.\n",
+    "\n",
+    "# Settings for Sinequa Server to Query\n",
+    "\n",
+    "In this notebook, we assume that environment variables are defined to specify the root URL of the Sinequa server, the search query endpoint URL, the names of the app and query app to be used, and the credentials to be used for access (username and password).  In the cell below, several necessary Python modules are imported and these environment variables are read in to configure the settings to be used in the search queries."
    ]
   },
   {
@@ -49,7 +57,9 @@
    "id": "e474ac98",
    "metadata": {},
    "source": [
-    "# Search Query Setup"
+    "# Search Query Setup\n",
+    "\n",
+    "Here, we define a string that will serve as our search keyword for the queries demonstrated in this notebook."
    ]
   },
   {
@@ -76,7 +86,9 @@
    "id": "7a548b29",
    "metadata": {},
    "source": [
-    "# Define Functions to Query Sinequa and Summarize Response"
+    "# Define Functions to Query Sinequa and Summarize Response\n",
+    "\n",
+    "In the cell below, we define functions to issue the REST query to the Sinequa server and to print a condensed summary of the search query response JSON."
    ]
   },
   {
@@ -127,7 +139,9 @@
    "id": "d179b2a3",
    "metadata": {},
    "source": [
-    "# Basic Keyword Search"
+    "# Basic Keyword Search\n",
+    "\n",
+    "In the cell below, we demonstrate how basic keyword search can be done.  The relevant payload parameters are the user credentials, the app and query app names, and the keyword string to search.  Note that the response has 10 records because the results are paged and the default page size is 10."
    ]
   },
   {
@@ -253,7 +267,9 @@
    "id": "d438a77e",
    "metadata": {},
    "source": [
-    "# Paging of Search Results"
+    "# Paging of Search Results\n",
+    "\n",
+    "In the cell below, we configure two additional payload settings, `pageSize` and `page` to demonstrate how the paging behavior can be changed.  The `pageSize` indicates the number of documents to be included on each page, and the `page` is the page numbder to be returned.  The setting `\"page\": 1` would yield the first page.  Here, we use a page size of `20` instead of the default of `10`, and request the second page."
    ]
   },
   {
@@ -365,7 +381,9 @@
    "id": "fb866af4",
    "metadata": {},
    "source": [
-    "# Sort by column \"size\" descending"
+    "# Sort by column \"size\" descending\n",
+    "\n",
+    "In this cell, we demonstrate how we can sort the search results based on values in a particular column.  We use the `orderBy` setting the the query payload to specify the name of the column and the search direction (`asc` for ascending or `desc` for descending), separated by a space.  By default, Sinequa sorts for relevance.  In the example below, we use `orderBy` to change the behavior to sort by the `size` column in descending order."
    ]
   },
   {
@@ -472,7 +490,9 @@
    "id": "8fec1af4",
    "metadata": {},
    "source": [
-    "# Sort by column \"size\" ascending"
+    "# Sort by column \"size\" ascending\n",
+    "\n",
+    "In the cell below we again sort by `size` as in the cell above, but this time we change the sort order to ascending.  You can take note that the first document returned in the **descending** sort example above has a larger value for the `'size'` column compared to the first document in this **ascending** sort example."
    ]
   },
   {
@@ -582,7 +602,9 @@
    "id": "02bcb34e",
    "metadata": {},
    "source": [
-    "# Filter by tab - no match to \"Images\""
+    "# Filter by tab - no match to \"Images\"\n",
+    "\n",
+    "One way to filter Sinequa search results is by specifying a \"tab\" name.  When data sources are configured to be indexed, they can be organized under tabs like `Data`, `Images`, `Documentation`, `Software and Tools`, or `Missions and Instruments`.  To filter by tab, we specify the desired tab name by adding a setting called `tab` to the query payload.  In this example, we filter to the tab called `Images`, which has no matching documents."
    ]
   },
   {
@@ -626,7 +648,9 @@
    "id": "82a6548e",
    "metadata": {},
    "source": [
-    "# Filter by tab - matches to \"Data\""
+    "# Filter by tab - matches to \"Data\"\n",
+    "\n",
+    "In this cell, we try the filter by tab again, but this time we select the tab called `Data`, which has many maching documents."
    ]
   },
   {
@@ -739,7 +763,7 @@
    "source": [
     "# Filter by Facet\n",
     "\n",
-    "Facets are presented in Sinequa as branches of a tree that can be defined when data sources are configured for indexing.  One or more branches or sub-branches of the tree can be specified as \"tree paths\".  The search results are filtered to only the documents under those tree paths.\n",
+    "Any way to filter the documents returned in a search is by subsetting to those that match any of a set of facets.  Facets are presented in Sinequa as branches of a tree that can be defined when data sources are configured for indexing.  One or more branches or sub-branches of the tree can be specified as \"tree paths\".  The search results are filtered to only the documents under those tree paths.\n",
     "\n",
     "The key extra payload element under query to match tree paths of `/path1`, `/path2`, or `/path3` looks like this:\n",
     "\n",
